<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".RegisterActivity"
    android:background="@color/storm"

    >

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_event"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/register_flag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_logo"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"

        android:text="@string/register"
        android:textColor="@color/gold"
        android:textSize="25sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/choose_username"
        android:background="@drawable/shape_style_rounded"
        android:backgroundTint="#30ffffff"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_baseline_person_24"

        android:layout_below="@id/register_flag"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/choose_password"
        android:backgroundTint="#30ffffff"
        android:background="@drawable/shape_style_rounded"

        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:layout_below="@id/username"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/re_enter_password"
        android:backgroundTint="#30ffffff"
        android:background="@drawable/shape_style_rounded"

        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:layout_below="@id/password"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_btn"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/gold"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:layout_below="@id/repassword"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/existing_user"
        android:backgroundTint="@color/ocean"

        android:textColor="@color/gold"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sign_up_button"/>





</RelativeLayout>