<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity"
    android:background="@color/storm"

    >
    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_event"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/sign_in_flag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_logo"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"

        android:text="@string/event_tracker"
        android:textColor="@color/gold"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_flag"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_style_rounded"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:backgroundTint="#30ffffff"

        android:hint="@string/username"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/password_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_below="@id/username_one"
        android:backgroundTint="#30ffffff"
        android:background="@drawable/shape_style_rounded"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"

        android:importantForAutofill="no" />

    <Button
        android:id="@+id/sign_in_button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_one"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/gold"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/log_in" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:backgroundTint="@color/ocean"
        android:textColor="@color/gold"
        android:textSize="15sp"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sign_in_button_one"
        />

    <Button
        android:id="@+id/request_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:backgroundTint="@color/sky"
        android:text="@string/request_permissions"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        tools:ignore="SmallSp" />

</RelativeLayout>